--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -7,7 +7,7 @@
                     <h2 class="text-center">Key Features</h2>
                     <ul class="list-group">
                       <li class="list-group-item">Our password manager utilizes advanced encryption protocols and multi-factor authentication to keep your data safe.</li>
-                      <li class="list-group-item">Data 2 </li>
+                      <li class="list-group-item">Kindly use key of length more than 32 characters including caps, small, special and numbers. Store this key as you need it. </li>
                       <li class="list-group-item">Data 3 </li>
                       <li class="list-group-item">Data 4 </li>
                     </ul>
