--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,7 +28,7 @@
 								<a class="nav-link" href="/contents/new">Add Passwords</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">dummy button</a>
+								<a class="nav-link" href="/contents">View Credentials</a>
 							</li>
 						</ul>
 						<ul class="navbar-nav ms-auto">
