--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,8 +14,7 @@
 				<input class="form-control" type="text" name="username" placeholder="username" required>
 			</div>
 			<div class="form-group mb-2">
-				<input class="form-control" type="password" name="privateKey" placeholder="key(min 32 chars, include small, cap, special, num)" required 
-				pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[^\da-zA-Z]).{32,}$">
+				<input class="form-control" type="password" name="privateKey" placeholder="key(min 32 chars, include small, cap, special, num)" required>
 			</div>
 			<div class="form-group mb-2"> 
 				<input class="form-control" type="password" id="password" name="password" 
